--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/index.xhtml
@@ -61,7 +61,7 @@
                         </p:column>                        
                     </p:column>
                 </p:dataTable>
-                <p:commandButton value="Adicionar Componente Interactivo" action="#{gestionComponentesInteractivosController.nuevoReg()}"></p:commandButton>
+                <p:commandButton value="Adicionar Componente Interactivo" action="#{gestionComponentesInteractivosController.initNuevo()}"></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionComponentesInteractivosController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
             <div class="EmptyBox5"></div>
