Correccion de bugs

--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/indexItems.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/indexItems.xhtml
@@ -19,6 +19,7 @@
         <div class="EmptyBox5"></div>
         <p:panel>
             <h:form enctype="multipart/form-data" id="consultaForm" >
+                <p:outputLabel value="#{gestionarEvaluacionController.evaluacionModifica.evNombre}"></p:outputLabel>
                 <p:dialog widgetVar="dlgEliminar2" header="Eliminar" modal="true">
                     <p:outputLabel value="¿Está Realmente seguro de eliminar el registro?" class="TexAlCenter" ></p:outputLabel>
                     <div class="EmptyBox20"></div>
